src/test/deca/syntax/valid/perso/test_tabulation.deca
// Description:
//    Programme minimaliste testant la tabulation.
//
// Resultats:
//    Hello
//    Hello
//
// Historique:
//    cree le 05/01/2023

{
            println("Hello");
println("Hello);
}
