src/test/deca/syntax/invalid/homemade/test/test_pars_inv_intruction_inequality_expr_instance_no_iden1.deca
// Description:
//    tests de programme incorrect syntaxiquement pour instance of
//
// Resultats:
//    Ligne 11 : Erreur ( expected TYPE after "instanceof")
//    
//
// Historique:
//    cree le 04/01/2023
{
    expr1 +expr2 instanceof;
}